--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <meta property="og:type" content="website" />
 
     <link
-      rel="alternate"
-      href="https://www.benyonlinecv.netlify.app"
-      hreflang="en-US"
+    rel="alternate"
+    href="https://www.benyonlinecv.netlify.app"
+    hreflang="en-US"
     />
     <!-- Enlace alternativo para la versión en inglés -->
     <link rel="canonical" href="https://www.benyonlinecv.netlify.app/es" />
@@ -43,39 +43,41 @@
     <!--Enlace al script de JavaScript, defer para que se cargue después del HTML-->
 
     <link rel="stylesheet" href="/css/styles.css" />
-  </head>
+</head>
 
-  <h3>
+<h3>
     Referencias nuevas todos los días - Compra 4 pares y lleva el 5to a mitad de
     precio.
-  </h3>
+</h3>
+<span>
+    <header class="container-header">
+        <h1>
+        Shoe <br>
+        Dealer
+        </h1>
+        <a href="/index.html" class="Logo">
+        <img src="/Images/logo.png" class="logo" width="300px">
+        </a>
 
-  <header class="container-header">
-    <h1>
-      Shoe <br />
-      Dealer
-    </h1>
-    <a href="/index.html" class="Logo">
-      <img src="/Images/logo.png" class="logo" width="300px" />
-    </a>
-
-    <h3>Instagram</h3>
-    <h3>Facebook</h3>
-    <h3>Log in</h3>
-    <h3>Carrito de Compra</h3>
+        <a href="www.instagram.com"><img src="/Images/instagram.svg" alt="Instagran icon" width="150px"></a>
+        <a href="www.facebook.com"><img src="/Images/facebook.svg" alt="Facebook icon" width="150px"> </a>
+        <a href="/Page/Login.html"><img src="/Images/login.svg" alt="Login icon" width="150px"></a>
+        <a href="/Page/Cart.html"><img src="/Images/carrito.svg" alt="Cart icon" width="150px"></a>
 
     <!-- Barra de busqueda -->
 
-    <h2>Tenis</h2>
-    <h2>Bolsos</h2>
-    <h2>Chaquetas</h2>
-    <h2>Medias</h2>
-    <h2>Accesorios</h2>
-  </header>
+        <h2>Tenis</h2>
+        <h2>Bolsos</h2>
+        <h2>Chaquetas</h2>
+        <h2>Medias</h2>
+        <h2>Accesorios</h2>
+    </header>
+</span>
+<h2>Colecciones</h2>
+<img src="/Images/logo.png" width="300px" />
 
-  <h2>Colecciones</h2>
-  <img src="/Images/logo.png" width="300px" />
+<h2>Preguntas frecuentes</h2>
+<!-- desplegable-->
 
-  <h2>Preguntas frecuentes</h2>
-  <!-- desplegable-->
+<footer> Atención al cliente</footer>
 </html>
